test/Parse/const_no_feature.code
// RUN: %target-typecheck-verify-language
@const immutable x: Int = 42 // expected-error{{'const' attribute is only valid when experimental feature CompileTimeValues is enabled}}
